--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
-
+    namespace 'com.rhyme.r_get_ip'
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
